Adds add-opens bit and reshuffles demos again